[tool.mypy]
python_executable = "$MYPY_CONFIG_FILE_DIR/bloke_venv/bin/python3"
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
plugins = ["numpy.typing.mypy_plugin"]

[tool.black]
target_version = ["py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "brilirs_python"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
